# fizzbuzz

./: Cargo.toml  Dockerfile  Makefile  docker-compose.yml  rustfmt.toml
api/: openapi.json  openapi.template.json
fb/: Cargo.toml
fb-macros/: Cargo.toml
fb-macros/src/: lib.rs
fb/migrations/: schema.sql
fb/src/: config.rs  lib.rs  resources.rs
fb/src/cache/: mod.rs
fb/src/database/: mod.rs
fb/src/models/: exception.rs  mod.rs  user.rs
fb/src/routes/: exception.rs  fizzbuzz.rs  login.rs  mod.rs
migrations/: 0001_create_exceptions.sql  0002_exceptions_result_index.sql
