[package]
name = "fb"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fizzbuzz"
path = "src/bin/main.rs"

[[bin]]
name = "migration"
path = "src/bin/migration.rs"

[[bin]]
name = "doc"
path = "src/bin/doc.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
fb-macros = { path = "../fb-macros" }
redis = { version = "1.2.0", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "macros", "sqlite", "uuid"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
uuid = { version = "1", features = ["v4", "serde"] }
